--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,8 @@ flask==2.3.3
 python-dotenv==1.0.0
 gunicorn==21.2.0
 Werkzeug==2.3.7
+requests==2.31.0
+Jinja2==3.1.2
+itsdangerous==2.1.2
+click==8.1.7
+markupsafe==2.1.3
