--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,13 +12,16 @@ services:
       - ./app/results:/app/app/results
     environment:
       - SECRET_KEY=webreconlite-production-key
-      - DEBUG=False
+      - DEBUG=True
       - PYTHONUNBUFFERED=1
+      - FLASK_APP=app.py
+      - FLASK_ENV=development
+      - FLASK_DEBUG=1
     restart: unless-stopped
     networks:
       - webreconlite-network
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8001/tools || exit 1" ]
+      test: ["CMD-SHELL", "curl -f http://localhost:8001/ || exit 1" ]
       interval: 30s
       timeout: 10s
       retries: 3
