--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,6 @@ Jinja2==3.1.2
 itsdangerous==2.1.2
 click==8.1.7
 markupsafe==2.1.3
+celery==5.3.4
+redis==5.0.1
+flower==2.0.1  # Celery monitoring tool
