--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,4 @@ markupsafe==2.1.3
 celery==5.3.4
 redis==5.0.1
 flower==2.0.1  # Celery monitoring tool
+kombu==5.3.2  # Messaging library for Celery
